net/04-NetworkPolicies/np/np-01.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny-all
  namespace: app2
spec:
  policyTypes:
    - Ingress
  podSelector: {}
  ingress: []
